# ticks_data_sampling_preprocessing

./: .gitignore  LICENSE  README.md  bar_generation.ipynb  pyproject.toml
bars/: dollar_bars.h5
utils/: bar_makers.py  threshold_calculators.py
