[project]
name = "ticks-data-sampling-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mplfinance>=0.12.10b0",
    "numba>=0.62.1",
    "pathlib>=1.0.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
